# cad-capital-gains

./: .gitignore  .travis.yml  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  python.yml  release.yml
capgains/: cli.py  exchange_rate.py  ticker_gains.py  transaction.py  transactions.py  transactions_reader.py
capgains/commands/: capgains_calc.py  capgains_maxcost.py  capgains_show.py
scripts/: capgains  envsetup.sh
tests/: comprehensive_basic.csv  comprehensive_edge_cases.csv  comprehensive_superficial.csv  conftest.py  helpers.py  sample.csv  sample.json  test_capgains.py  test_capgains_calc.py  test_capgains_maxcost.py  test_capgains_show.py  test_commission_handling.py  test_comprehensive_basic.py  test_comprehensive_edge_cases.py  test_comprehensive_superficial.py  test_exchange_rate.py  test_json_output.py  test_sample.py  test_ticker_gains.py  test_transaction.py  test_transactions_reader.py  test_transactions_reader_errors.py
