[tool.poetry]
# Store the file as 'cad-capgains' on PyPi, but have the CLI command be named
# 'capgains'
name = "cad-capgains"
version = "1.1.0"
description = "A CLI tool to calculate your capital gains"
license = "MIT"
readme = "README.md"
maintainers = [
    "Eddy Maric",
    "Emil Maric"
]
authors = [
    "Eddy Maric",
    "Emil Maric"
]
packages = [
    { include = "capgains" },
]
homepage = "https://github.com/EmilMaric/cad-capital-gains"
repository = "https://github.com/EmilMaric/cad-capital-gains"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
    'capital',
    'gains',
    'canadian',
    'tax'
]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.1.2"
tabulate = "^0.8.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.15.0"
requests-mock = "^1.8.0"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
capgains = "capgains.cli:capgains"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
