[tool.poetry]
# Store the file as 'cad-capgains' on PyPi, but have the CLI command be named
# 'capgains'
name = "cad-capgains"
version = "2.0.2"
description = "A CLI tool to calculate your capital gains"
license = "MIT"
readme = "README.md"
maintainers = [
    "Eddy Maric",
    "Emil Maric"
]
authors = [
    "Eddy Maric",
    "Emil Maric"
]
packages = [
    { include = "capgains" },
]
homepage = "https://github.com/EmilMaric/cad-capital-gains"
repository = "https://github.com/EmilMaric/cad-capital-gains"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
    'capital',
    'gains',
    'canadian',
    'tax'
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.1.2"
tabulate = "^0.8.7"
requests = "^2.23.0"
flake8-pyproject = "^1.2.3"
pytest-cov = "^6.1.1"
tox = "^4.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
requests-mock = "^1.8.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
capgains = "capgains.cli:capgains"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    ".tox",
    ".pytest_cache"
]
